Implementing Feedforward and backpropagation

--- a/Notebooks/Feedforward_backpropagation.ipynb
+++ b/Notebooks/Feedforward_backpropagation.ipynb
@@ -127,6 +127,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model Accuracy: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert probabilities to binary predictions (Threshold = 0.5)\n",
+    "predictions = final_output >= 0.5  # True (1) if ≥ 0.5, else False (0)\n",
+    "\n",
+    "# Compute Accuracy\n",
+    "accuracy = np.mean(predictions == y)\n",
+    "print(f\"\\nModel Accuracy: {accuracy * 100:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
