--- a/Notebooks/Feedforward_backpropagation.ipynb
+++ b/Notebooks/Feedforward_backpropagation.ipynb
@@ -150,6 +150,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model Accuracy: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Convert predictions to binary (0 or 1)\n",
+    "binary_predictions = (final_output >= 0.5).astype(int)\n",
+    "\n",
+    "# Compute accuracy using scikit-learn\n",
+    "accuracy = accuracy_score(y, binary_predictions)\n",
+    "print(f\"\\nModel Accuracy: {accuracy * 100:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
