--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -400,11 +400,260 @@
     }
    ],
    "source": [
-    "# split the data into dependent and independent variables\n",
+    "# Split the data into dependent and independent variables\n",
     "X = data_cleaned.drop(columns=[\"Exited\"])\n",
     "y = data_cleaned[\"Exited\"]\n",
     "print(f\"Independent Features (X) shape: {X.shape}\")\n",
     "print(f\"Dependent Feature (y) shape: {y.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Label Encoding** is a technique used to convert categorical (text) data into numerical values so that machine learning models can process it.\n",
+    "- Each unique category in a feature column is assigned a numerical label. Example Gender\n",
+    "\n",
+    "**One-Hot Encoding** If the categorical data does not have an ordinal relationship. For example Country names, colors\n",
+    "- One-Hot Encoding creates binary columns for each category, avoiding misleading ordinal relationships.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Label encoding Gender \n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "labelencoder_gender = LabelEncoder()\n",
+    "X.iloc[:, 2] = labelencoder_gender.fit_transform(X.iloc[:,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>619</td>\n",
+       "      <td>France</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>608</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>502</td>\n",
+       "      <td>France</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>699</td>\n",
+       "      <td>France</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>850</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>771</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96270.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>516</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "      <td>57369.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101699.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>709</td>\n",
+       "      <td>France</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42085.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>772</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75075.31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92888.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>792</td>\n",
+       "      <td>France</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130142.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38190.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CreditScore Geography Gender  Age  Tenure    Balance  NumOfProducts  \\\n",
+       "0             619    France      0   42       2       0.00              1   \n",
+       "1             608     Spain      0   41       1   83807.86              1   \n",
+       "2             502    France      0   42       8  159660.80              3   \n",
+       "3             699    France      0   39       1       0.00              2   \n",
+       "4             850     Spain      0   43       2  125510.82              1   \n",
+       "...           ...       ...    ...  ...     ...        ...            ...   \n",
+       "9995          771    France      1   39       5       0.00              2   \n",
+       "9996          516    France      1   35      10   57369.61              1   \n",
+       "9997          709    France      0   36       7       0.00              1   \n",
+       "9998          772   Germany      1   42       3   75075.31              2   \n",
+       "9999          792    France      0   28       4  130142.79              1   \n",
+       "\n",
+       "      HasCrCard  IsActiveMember  EstimatedSalary  \n",
+       "0             1               1        101348.88  \n",
+       "1             0               1        112542.58  \n",
+       "2             1               0        113931.57  \n",
+       "3             0               0         93826.63  \n",
+       "4             1               1         79084.10  \n",
+       "...         ...             ...              ...  \n",
+       "9995          1               0         96270.64  \n",
+       "9996          1               1        101699.77  \n",
+       "9997          0               1         42085.58  \n",
+       "9998          1               0         92888.52  \n",
+       "9999          1               0         38190.78  \n",
+       "\n",
+       "[10000 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
