--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -658,6 +658,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['0.0', '1.0', '1.0', ..., '1', '1', '101348.88'],\n",
+       "       ['0.0', '1.0', '0.0', ..., '0', '1', '112542.58'],\n",
+       "       ['0.0', '1.0', '1.0', ..., '1', '0', '113931.57'],\n",
+       "       ...,\n",
+       "       ['0.0', '1.0', '1.0', ..., '0', '1', '42085.58'],\n",
+       "       ['1.0', '0.0', '0.0', ..., '1', '0', '92888.52'],\n",
+       "       ['0.0', '1.0', '1.0', ..., '1', '0', '38190.78']], dtype='<U32')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# One-hot encoding Geography\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "ct = ColumnTransformer([('ohe', OneHotEncoder(), [1])], remainder='passthrough') # [1] is the second column we are transforming\n",
+    "X = np.array(ct.fit_transform(X), dtype=str)\n",
+    "\n",
+    "X[:, 1:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
