--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -658,22 +658,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['0.0', '1.0', '1.0', ..., '1', '1', '101348.88'],\n",
-       "       ['0.0', '1.0', '0.0', ..., '0', '1', '112542.58'],\n",
-       "       ['0.0', '1.0', '1.0', ..., '1', '0', '113931.57'],\n",
+       "array([['1.0', '0.0', '1.0', ..., '1', '1', '101348.88'],\n",
+       "       ['1.0', '0.0', '1.0', ..., '0', '1', '112542.58'],\n",
+       "       ['1.0', '0.0', '1.0', ..., '1', '0', '113931.57'],\n",
        "       ...,\n",
-       "       ['0.0', '1.0', '1.0', ..., '0', '1', '42085.58'],\n",
-       "       ['1.0', '0.0', '0.0', ..., '1', '0', '92888.52'],\n",
-       "       ['0.0', '1.0', '1.0', ..., '1', '0', '38190.78']], dtype='<U32')"
+       "       ['1.0', '0.0', '1.0', ..., '0', '1', '42085.58'],\n",
+       "       ['0.0', '1.0', '0.0', ..., '1', '0', '92888.52'],\n",
+       "       ['1.0', '0.0', '1.0', ..., '1', '0', '38190.78']], dtype='<U32')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,96 @@
     "ct = ColumnTransformer([('ohe', OneHotEncoder(), [1])], remainder='passthrough') # [1] is the second column we are transforming\n",
     "X = np.array(ct.fit_transform(X), dtype=str)\n",
     "\n",
-    "X[:, 1:]\n"
+    "# X[:, 1:]\n",
+    "X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into training and test set\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature scaling\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "        -1.03227043,  1.10643166],\n",
+       "       [-1.75486502,  1.75486502, -1.75486502, ...,  0.64259497,\n",
+       "         0.9687384 , -0.74866447],\n",
+       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "        -1.03227043,  1.48533467],\n",
+       "       ...,\n",
+       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "        -1.03227043,  1.41231994],\n",
+       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "         0.9687384 ,  0.84432121],\n",
+       "       [-1.75486502,  1.75486502, -1.75486502, ...,  0.64259497,\n",
+       "        -1.03227043,  0.32472465]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
+       "         0.97628121,  1.62185911],\n",
+       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
+       "        -1.02429504,  0.504204  ],\n",
+       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
+       "         0.97628121, -0.41865644],\n",
+       "       ...,\n",
+       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
+       "        -1.02429504,  0.72775202],\n",
+       "       [-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
+       "         0.97628121, -1.54162886],\n",
+       "       [-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
+       "        -1.02429504,  1.62356528]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
    ]
   },
   {
