Adding hidden layers

--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,12 +709,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "sc = StandardScaler()\n",
     "X_train = sc.fit_transform(X_train)\n",
-    "X_test = sc.fit_transform(X_test)"
+    "X_test = sc.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "        -1.03227043,  0.32472465]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -767,13 +767,339 @@
        "        -1.02429504,  1.62356528]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>1.743090</td>\n",
+       "      <td>0.169582</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>-0.464608</td>\n",
+       "      <td>0.006661</td>\n",
+       "      <td>-1.215717</td>\n",
+       "      <td>0.809503</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>-1.032270</td>\n",
+       "      <td>1.106432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>-0.573694</td>\n",
+       "      <td>-2.304559</td>\n",
+       "      <td>0.916013</td>\n",
+       "      <td>0.301026</td>\n",
+       "      <td>-1.377440</td>\n",
+       "      <td>-0.006312</td>\n",
+       "      <td>-0.921591</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>0.968738</td>\n",
+       "      <td>-0.748664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.985604</td>\n",
+       "      <td>-0.573694</td>\n",
+       "      <td>-1.191196</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>-0.943129</td>\n",
+       "      <td>-1.031415</td>\n",
+       "      <td>0.579935</td>\n",
+       "      <td>-0.921591</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>-1.032270</td>\n",
+       "      <td>1.485335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>1.743090</td>\n",
+       "      <td>0.035566</td>\n",
+       "      <td>0.916013</td>\n",
+       "      <td>0.109617</td>\n",
+       "      <td>0.006661</td>\n",
+       "      <td>0.473128</td>\n",
+       "      <td>-0.921591</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>-1.032270</td>\n",
+       "      <td>1.276528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>1.743090</td>\n",
+       "      <td>2.056114</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>1.736588</td>\n",
+       "      <td>1.044737</td>\n",
+       "      <td>0.810193</td>\n",
+       "      <td>0.809503</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>0.968738</td>\n",
+       "      <td>0.558378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7995</th>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>-0.573694</td>\n",
+       "      <td>-0.582970</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>-0.656016</td>\n",
+       "      <td>-0.339364</td>\n",
+       "      <td>0.703104</td>\n",
+       "      <td>0.809503</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>0.968738</td>\n",
+       "      <td>1.091330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7996</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>1.743090</td>\n",
+       "      <td>1.478815</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>-1.613058</td>\n",
+       "      <td>-0.339364</td>\n",
+       "      <td>0.613060</td>\n",
+       "      <td>-0.921591</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>0.968738</td>\n",
+       "      <td>0.131760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7997</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.985604</td>\n",
+       "      <td>-0.573694</td>\n",
+       "      <td>0.901515</td>\n",
+       "      <td>0.916013</td>\n",
+       "      <td>-0.368904</td>\n",
+       "      <td>0.006661</td>\n",
+       "      <td>1.361474</td>\n",
+       "      <td>0.809503</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>-1.032270</td>\n",
+       "      <td>1.412320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7998</th>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>0.569844</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>1.743090</td>\n",
+       "      <td>-0.624205</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>-0.081791</td>\n",
+       "      <td>1.390762</td>\n",
+       "      <td>-1.215717</td>\n",
+       "      <td>0.809503</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>0.968738</td>\n",
+       "      <td>0.844321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7999</th>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.754865</td>\n",
+       "      <td>-1.014607</td>\n",
+       "      <td>-0.573694</td>\n",
+       "      <td>-0.284011</td>\n",
+       "      <td>-1.091687</td>\n",
+       "      <td>0.875251</td>\n",
+       "      <td>-1.377440</td>\n",
+       "      <td>0.511364</td>\n",
+       "      <td>-0.921591</td>\n",
+       "      <td>0.642595</td>\n",
+       "      <td>-1.032270</td>\n",
+       "      <td>0.324725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8000 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2         3         4         5         6   \\\n",
+       "0     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  0.169582   \n",
+       "1    -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -2.304559   \n",
+       "2     0.569844 -0.569844  0.569844  0.569844  0.985604 -0.573694 -1.191196   \n",
+       "3     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  0.035566   \n",
+       "4     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  2.056114   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "7995 -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -0.582970   \n",
+       "7996  0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  1.478815   \n",
+       "7997  0.569844 -0.569844  0.569844  0.569844  0.985604 -0.573694  0.901515   \n",
+       "7998  0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090 -0.624205   \n",
+       "7999 -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -0.284011   \n",
+       "\n",
+       "            7         8         9         10        11        12        13  \\\n",
+       "0    -1.091687 -0.464608  0.006661 -1.215717  0.809503  0.642595 -1.032270   \n",
+       "1     0.916013  0.301026 -1.377440 -0.006312 -0.921591  0.642595  0.968738   \n",
+       "2    -1.091687 -0.943129 -1.031415  0.579935 -0.921591  0.642595 -1.032270   \n",
+       "3     0.916013  0.109617  0.006661  0.473128 -0.921591  0.642595 -1.032270   \n",
+       "4    -1.091687  1.736588  1.044737  0.810193  0.809503  0.642595  0.968738   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "7995 -1.091687 -0.656016 -0.339364  0.703104  0.809503  0.642595  0.968738   \n",
+       "7996 -1.091687 -1.613058 -0.339364  0.613060 -0.921591  0.642595  0.968738   \n",
+       "7997  0.916013 -0.368904  0.006661  1.361474  0.809503  0.642595 -1.032270   \n",
+       "7998 -1.091687 -0.081791  1.390762 -1.215717  0.809503  0.642595  0.968738   \n",
+       "7999 -1.091687  0.875251 -1.377440  0.511364 -0.921591  0.642595 -1.032270   \n",
+       "\n",
+       "            14  \n",
+       "0     1.106432  \n",
+       "1    -0.748664  \n",
+       "2     1.485335  \n",
+       "3     1.276528  \n",
+       "4     0.558378  \n",
+       "...        ...  \n",
+       "7995  1.091330  \n",
+       "7996  0.131760  \n",
+       "7997  1.412320  \n",
+       "7998  0.844321  \n",
+       "7999  0.324725  \n",
+       "\n",
+       "[8000 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building Neural Network\n",
+    "from keras.models import Sequential # near stack of layers, meaning we build the network layer by layer in sequence.\n",
+    "from keras.layers import Dense # This is a fully connected (FC) layer, meaning each neuron is connected to all neurons in the previous and next layers.\n",
+    "classifier = Sequential()\n",
+    "\n",
+    "classifier.add(Dense(units=6, kernel_initializer='uniform', activation='relu', input_dim = 11))\n",
+    "# units = 6 ->> no. of neurons\n",
+    "# kernel_initializer = 'uniform' ->> initializes the weights randomly with uniform distribution (all values between -0.05 and 0.05)\n",
+    "# input_dim = 11 ->> defines the number of input features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the next hidden layer\n",
+    "classifier.add(Dense(units=6, kernel_initializer='uniform', activation='relu'))"
    ]
   },
   {
