--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -1077,9 +1077,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-21 19:07:31.258885: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# Building Neural Network\n",
     "from keras.models import Sequential # near stack of layers, meaning we build the network layer by layer in sequence.\n",
@@ -1094,12 +1103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Adding the next hidden layer\n",
     "classifier.add(Dense(units=6, kernel_initializer='uniform', activation='relu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the output layer\n",
+    "classifier.add(Dense(units=1, kernel_initializer='uniform', activation='sigmoid'))"
    ]
   },
   {
