--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -1123,6 +1123,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier.compile(optimizer='adam', loss='binary_crossentropy', metrics =['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
